--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.x
+          ruby-version: 3.2.5
       - name: Install dependencies
         run: bundle install
       - name: Build site with Jekyll
