--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,7 +19,9 @@ jobs:
         with:
           ruby-version: "3.2.5"
       - name: Install dependencies
-        run: bundle install
+        run: |
+          gem install bundler
+          bundle install
       - name: Build site with Jekyll
         run: bundle exec jekyll build
       - name: Deploy to GitHub Pages
