--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main
-
-permissions:
-  contents: write # リポジトリの内容への書き込みを許可
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,3 +26,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./public
+      - name: Set permissions for the GitHub token
+        run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
